# ChangeLog for dev-ruby/mechanize
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/ChangeLog,v 1.3 2007/09/13 01:06:36 agorf Exp $

*mechanize-0.6.10 (13 Sep 2007)

  13 Sep 2007; Aggelos Orfanakos <agorf@gentoo.org>
  +mechanize-0.6.10.ebuild:
  Version bump to 0.6.10.

  14 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> mechanize-0.6.7.ebuild:
  Add a dep that wasn't described in the upstream documentation, but is needed
  by the .gem

*mechanize-0.6.7 (14 Apr 2007)

  14 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +mechanize-0.6.7.ebuild:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
