@@ -1,6 +1,8 @@
 DIST mechanize-0.6.10.gem 96256 RMD160 8931c284f763a82b9eaf0cce921a1f13c837accf SHA1 7647bee1d03dcfc93097746ea49c2f1d9d0e1f54 SHA256 97ab641439e730c8fcd3a9ddee0fdb3fc47f2f9bfbb38899389979887ea21de0
+DIST mechanize-0.6.11.gem 96768 RMD160 395af74c82f5281fe09e204cbe45142ff4d190e0 SHA1 1c1b8e9dcde7d8e0e6c9602a0571fa8f2ac3cec5 SHA256 75f022f9dc1c72f28b92144a44f1507c0c264df44b0236e75969436686814042
 DIST mechanize-0.6.7.gem 92672 RMD160 eb9c4d5b3c1c526c97da614c8d7ef03433d2d788 SHA1 d338f10b908ab5c40b49df8a130565d9aa29b4be SHA256 5d4d09c093d6fd6adb944158ae224f67a49cc64a48a1855905ebc668015a97c1
 EBUILD mechanize-0.6.10.ebuild 620 RMD160 2e14fabdf86b75ed2b9bec732d2f078085bfb349 SHA1 4db0d9a7de6213c2601e64b818f0d87d4b9a57df SHA256 81a78ff2d0cb58cec24a5107ee076fd25332ba7f082995e450f869dcb1aa6bea
+EBUILD mechanize-0.6.11.ebuild 620 RMD160 a319b4350c73424e5e202a2ac6965e9040b887aa SHA1 3d1b75b1ba1e484c1f3158d967ddba416bf68716 SHA256 c664ffaaf5e1f28b9e34002277357794b03f7cb248ca9f1a546c342def8128aa
 EBUILD mechanize-0.6.7.ebuild 623 RMD160 0d097e58c5d75ed20082d44406715c3c7216070e SHA1 6d113e6bb770771d3e16a481b42a52d6cc8a5f97 SHA256 e2a0d41ea7c4a7c89689861e63188618912a045fcd847cf214eb544de5ba372b
-MISC ChangeLog 714 RMD160 4bacd4c63d9402b7b52e1f9430822b71a5bd8e02 SHA1 423b5de8b8e33b676136ccbe1a5c61ba2c08e56e SHA256 af9ba7dec6d6c8d4106ff71c656e94432371796136ce8fea7aa60c4fbe154910
+MISC ChangeLog 844 RMD160 75960285274c507cf43816a839f24a4f8da4fe76 SHA1 3921704bf702b3932ad18221836a4ae4a50d2b5a SHA256 310f5377432f2d82a6784f743dd6f3b22319ffc8c8af0832eedf17d429c7004a
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
