@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/mechanize
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/ChangeLog,v 1.3 2007/09/13 01:06:36 agorf Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/ChangeLog,v 1.4 2007/12/06 00:04:02 agorf Exp $
+
+*mechanize-0.6.11 (05 Dec 2007)
+
+  05 Dec 2007; Aggelos Orfanakos <agorf@gentoo.org>
+  +mechanize-0.6.11.ebuild:
+  Version bump.
 
 *mechanize-0.6.10 (13 Sep 2007)
 
